--- a/playbooks/desktop.yml
+++ b/playbooks/desktop.yml
@@ -1,52 +1,51 @@
 #!/usr/bin/env -S ansible-playbook
 ---
-- name: Override ansible_connection if needed
-  import_playbook: prep_local.yml
-  tags: ["always"]
+- hosts: desktop
+  gather_facts: false
+  roles:
+    - role: common
+      tags: ["always"]
 
 - name: Desktop playbook
   gather_facts: true
   hosts: desktop
-  vars:
-    node_exporter_skip_install: false
-    node_exporter_version: "latest"
-    node_exporter_port: "{{ ports.node_exporter }}"
-    nvidiaexporter_port: "{{ ports.nvidia_exporter }}"
-  tasks:
-    - import_role: { name: common }
-      tags: ["always", "common"]
-
+  pre_tasks:
     - name: Merge ports
       set_fact:
         ports: "{{ ports | combine(_ports, recursive=true) }}"
       tags: ["always"]
-
-    - import_role: { name: borg }
+  roles:
+    - role: borg
       tags: ["borg"]
 
-    - import_role: { name: node_exporter }
+    - role: node_exporter
+      vars:
+        node_exporter_skip_install: false
+        node_exporter_version: "latest"
+        node_exporter_port: "{{ ports.node_exporter }}"
+        nvidiaexporter_port: "{{ ports.nvidia_exporter }}"
       tags: ["prometheus-stack", "node_exporter"]
 
-    - import_role: { name: btrbk }
+    - role: btrbk
       tags: ["btrbk"]
 
-    - import_role: { name: arch-common }
+    - role: arch-common
       tags: ["arch-common"]
 
-    - import_role: { name: spotify }
+    - role: spotify
       tags: ["spotify"]
 
-    - import_role: { name: discord }
+    - role: discord
       tags: ["discord"]
 
-    - import_role: { name: sshd }
+    - role: sshd
       tags: ["sshd"]
 
-    - import_role: { name: sudo }
+    - role: sudo
       tags: ["sudo"]
 
-    - import_role: { name: gnome-keyring }
+    - role: gnome-keyring
       tags: ["gnome-keyring"]
 
-    # - import_role: { name: nvidia_exporter }
+    # - role: nvidia_exporter
     #   tags: ["prometheus-stack", "nvidia_exporter"]
