--- a/playbooks/drepi.yml
+++ b/playbooks/drepi.yml
@@ -1,8 +1,10 @@
 #!/usr/bin/env -S ansible-playbook
 ---
-- name: Override ansible_connection if needed
-  import_playbook: prep_local.yml
-  tags: ["always"]
+- hosts: drepi
+  gather_facts: false
+  roles:
+    - role: common
+      tags: ["always"]
 
 - name: SSH
   hosts: drepi
@@ -288,9 +290,6 @@
       become: true
       when: firewall_frontend == "firewalld"
       tags: ["firewalld"]
-
-    - import_role: { name: common }
-      tags: ["always"]
 
     - import_role: { name: motion }
       tags: ["motion"]
