--- a/playbooks/i3.yml
+++ b/playbooks/i3.yml
@@ -1,15 +1,14 @@
 #!/usr/bin/env -S ansible-playbook
 ---
-- name: Override ansible_connection if needed
-  import_playbook: prep_local.yml
-  tags: ["always"]
-
 - hosts: gui
-  gather_facts: true
+  gather_facts: false
   roles:
     - role: common
       tags: ["always"]
 
+- hosts: gui
+  gather_facts: true
+  roles:
     - role: arch-common
       tags: ["arch-common"]
 
