Various variable changes

--- a/group_vars/gui/vars.yml
+++ b/group_vars/gui/vars.yml
@@ -42,6 +42,7 @@ pacman_packages:
   - pacutils
   - pamixer
   - pavucontrol
+  - perl-anyevent-i3
   - picom
   - pipewire-alsa
   - pipewire-pulse
