--- a/playbooks/drepi.yml
+++ b/playbooks/drepi.yml
@@ -1,11 +1,5 @@
 #!/usr/bin/env -S ansible-playbook
 ---
-- hosts: drepi
-  gather_facts: false
-  roles:
-    - role: common
-      tags: ["always"]
-
 - name: SSH
   hosts: drepi
   gather_facts: false
@@ -16,6 +10,11 @@
       service:
         name: sshd
         state: restarted
+  pre_tasks:
+    - name: Run common role
+      import_role:
+        name: common
+      tags: ["always"]
   tasks:
     # Set up ssh
     # https://github.com/hannseman/ansible-raspbian
@@ -53,7 +52,7 @@
       tags: ["sshd"]
 
 - name: Raspberry Pi 4 playbook
-  gather_facts: true
+  gather_facts: false
   hosts: drepi
   vars:
     system_timezone: "Europe/Oslo"
@@ -85,6 +84,15 @@
       command: "/usr/sbin/update-locale LANG={{ system_locale }}"
 
   pre_tasks:
+    - name: Run common role
+      import_role:
+        name: common
+      tags: ["always"]
+
+    - name: Gather facts
+      setup:
+      tags: ["always"]
+
     - name: Ensure camera is enabled
       become: true
       lineinfile:
