--- a/playbooks/dresrv.yml
+++ b/playbooks/dresrv.yml
@@ -1,18 +1,21 @@
 #!/usr/bin/env -S ansible-playbook
 ---
-- hosts: dresrv
-  gather_facts: false
-  roles:
-    - role: common
-      tags: ["always"]
-
 - name: Server playbook
-  gather_facts: true
+  gather_facts: false
   hosts: dresrv
   pre_tasks:
+    - name: Run common role
+      import_role:
+        name: common
+      tags: ["always"]
+
     - name: Merge ports
       set_fact:
         ports: "{{ ports | combine(_ports, recursive=true) }}"
+      tags: ["always"]
+
+    - name: Gather facts
+      setup:
       tags: ["always"]
 
     - name: Merge Docker ports
