--- a/playbooks/laptop.yml
+++ b/playbooks/laptop.yml
@@ -1,18 +1,21 @@
 #!/usr/bin/env -S ansible-playbook
 ---
-- hosts: laptop
-  gather_facts: false
-  roles:
-    - role: common
-      tags: ["always"]
-
 - name: Laptop playbook
-  gather_facts: true
+  gather_facts: false
   hosts: laptop
   pre_tasks:
+    - name: Run common role
+      import_role:
+        name: common
+      tags: ["always"]
+
     - name: Merge ports
       set_fact:
         ports: "{{ ports | combine(_ports, recursive=true) }}"
+      tags: ["always"]
+
+    - name: Gather facts
+      setup:
       tags: ["always"]
   roles:
     - role: node_exporter
