--- a/host_vars/laptop/chezmoi.yml
+++ b/host_vars/laptop/chezmoi.yml
@@ -3,7 +3,11 @@
 chezmoi_overrides:
   i3: |
     # Restore only if we have more than 1 display
-    if [[ $(xrandr --listactivemonitors | grep -oP '^Monitors: \K\d+') -gt 1 ]]; then
+    mon=$(xrandr --listactivemonitors)
+    if [[ $mon =~ DP-2 && $mon =~ HDMI-0 ]]; then
+      WS["1"]="work"
+      WS["2"]="work"
+    elif [[ $mon =~ DP-0 && $mon =~ DP-1 ]]; then
       WS["1"]="work"
       WS["2"]="laptop"
       WS["3"]="laptop"
@@ -15,6 +19,8 @@ chezmoi_overrides:
     MONITOR_MAP["eDP-1"]=laptop
     MONITOR_MAP["DP-0"]=laptop-ext
     MONITOR_MAP["DP-1"]=laptop-ext-secondary
+    MONITOR_MAP["DP-2"]=laptop-ext
+    MONITOR_MAP["HDMI-0"]=laptop-ext-secondary
     DPI_MAP["eDP-1-1"]='96'
   xinitrc: |
     QT_AUTO_SCREEN_SCALE_FACTOR="0"
@@ -23,6 +29,13 @@ chezmoi_overrides:
     idle_hook="none"
   xorg_3: |
     DPI=144
-    MONITOR_MAP["DP-0"]="--primary --mode 3840x2160"
-    MONITOR_MAP["DP-1"]="--left-of DP-0 --mode 3840x2160"
-    MONITOR_MAP["eDP-1-1"]="--right-of DP-0 --mode 1920x1080 --setprovideroutputsource modesetting NVIDIA-0"
+    mon=$(xrandr --listactivemonitors)
+    if [[ $mon =~ DP-2 && $mon =~ HDMI-0 ]]; then
+      MONITOR_MAP["DP-2"]="--primary --mode 3840x2160 --rate 120 --setprovideroutputsource modesetting NVIDIA-0"
+      MONITOR_MAP["HDMI-0"]="--above DP-2 --mode 3840x2160"
+      MONITOR_MAP["eDP-1-1"]="--off"
+    else
+      MONITOR_MAP["DP-0"]="--primary --mode 3840x2160 --setprovideroutputsource modesetting NVIDIA-0"
+      MONITOR_MAP["DP-1"]="--left-of DP-0 --mode 3840x2160"
+      MONITOR_MAP["eDP-1-1"]="--right-of DP-0 --mode 1920x1080"
+    fi
