--- a/host_vars/laptop/chezmoi.yml
+++ b/host_vars/laptop/chezmoi.yml
@@ -3,38 +3,39 @@
 chezmoi_overrides:
   i3: |
     # Restore only if we have more than 1 display
-    mon=$(xrandr --listactivemonitors)
+    mon=$(xrandr --query | grep -oP '\S+\s+connected' | cut -d' ' -f1)
     if [[ $mon =~ DP-2 && $mon =~ HDMI-0 ]]; then
       WS["1"]="work"
       WS["2"]="work"
     elif [[ $mon =~ DP-0 && $mon =~ DP-1 ]]; then
       WS["1"]="work"
-      WS["2"]="laptop"
-      WS["3"]="laptop"
+      WS["2"]="laptop-ext"
+      WS["3"]="laptop-ext"
     else
       WS["1"]="laptop"
     fi
   polybar: |
-    MONITOR_MAP["eDP-1-1"]=laptop
-    MONITOR_MAP["eDP-1"]=laptop
-    MONITOR_MAP["DP-0"]=laptop-ext
-    MONITOR_MAP["DP-1"]=laptop-ext-secondary
-    MONITOR_MAP["DP-2"]=laptop-ext
-    MONITOR_MAP["HDMI-0"]=laptop-ext-secondary
-    DPI_MAP["eDP-1-1"]='96'
+    MONITOR_MAP["eDP-1-1"]="laptop"
+    MONITOR_MAP["eDP-1"]="laptop"
+    MONITOR_MAP["DP-0"]="laptop-ext"
+    MONITOR_MAP["DP-1"]="laptop-ext-secondary"
+    MONITOR_MAP["DP-2"]="laptop-ext"
+    MONITOR_MAP["HDMI-0"]="laptop-ext-secondary"
+    DPI_MAP["eDP-1-1"]="96"
   xinitrc: |
     QT_AUTO_SCREEN_SCALE_FACTOR="0"
+    QT_QPA_PLATFORMTHEME="gtk2"
     MOZ_X11_EGL="1"
   lock: |
     idle_hook="none"
   xorg_3: |
     DPI=144
-    mon=$(xrandr --listactivemonitors)
+    mon=$(xrandr --query | grep -oP '\S+\s+connected' | cut -d' ' -f1)
     if [[ $mon =~ DP-2 && $mon =~ HDMI-0 ]]; then
       MONITOR_MAP["DP-2"]="--primary --mode 3840x2160 --rate 120 --setprovideroutputsource modesetting NVIDIA-0"
       MONITOR_MAP["HDMI-0"]="--above DP-2 --mode 3840x2160"
       MONITOR_MAP["eDP-1-1"]="--off"
-    else
+    elif [[ $mon =~ DP-0 && $mon =~ DP-1 ]]; then
       MONITOR_MAP["DP-0"]="--primary --mode 3840x2160 --setprovideroutputsource modesetting NVIDIA-0"
       MONITOR_MAP["DP-1"]="--left-of DP-0 --mode 3840x2160"
       MONITOR_MAP["eDP-1-1"]="--right-of DP-0 --mode 1920x1080"
