--- a/host_vars/dresrv/systemd.yml
+++ b/host_vars/dresrv/systemd.yml
@@ -81,7 +81,7 @@ systemd_units:
         environment:
           - "CONCAT_FILE=/tmp/motion-concat.txt"
           - "SRC_PATH=/tank/media/motion"
-          - 'FFMPEG_ARGS="-c:v libx265 -x265-params crf=28 -preset:v faster -c:a aac -y -r 5"'
+          - 'FFMPEG_ARGS="-c:v libx265 -x265-params crf=28 -preset:v faster -c:a aac -y -r {{ hostvars.drepi.motion_default_config.framerate }}"'
         exec_start:
           - "/usr/bin/bash -c '/usr/bin/ffmpeg -hide_banner -f concat -safe 0 -i $$CONCAT_FILE $$FFMPEG_ARGS $$SRC_PATH/$$(date -d yesterday +%%Y%%m%%d).mkv'"
         extra: |
