--- a/playbooks/drepi.yml
+++ b/playbooks/drepi.yml
@@ -343,7 +343,7 @@
       - name: Mount motion share
         mount:
           path: /mnt/motion
-          src: "//{{ server_local_ip }}/motion"
+          src: "//{{ hostvars.dresrv.ansible_host }}/motion"
           fstype: cifs
           state: mounted
           opts: "credentials={{ motion_smb_cred_file }},nofail,uid=motion,gid=adm,file_mode=0640,dir_mode=0750"
