--- a/host_vars/desktop/borg.yml
+++ b/host_vars/desktop/borg.yml
@@ -5,10 +5,10 @@ borg_backups:
     timer_description: "Backup root to server every 7 days at 20:00"
     oncalendar: "*-*-01/7 20:00:00"
     passphrase: "{{ borg_desktop_passphrase }}"
-    repo: "{{ borg_user }}@{{ server_local_ip }}:arch"
+    repo: "{{ borg_user }}@{{ hostvars.dresrv.ansible_host }}:arch"
     backup_name: "{{ ansible_hostname }}"
     pre_run: |
-      if ! ssh -q -o "BatchMode=yes" {{ borg_user }}@{{ server_local_ip }} exit &>/dev/null
+      if ! ssh -q -o "BatchMode=yes" {{ borg_user }}@{{ hostvars.dresrv.ansible_host }} exit &>/dev/null
       then
           echo "Cannot SSH into remote server"
           exit 1
@@ -41,10 +41,10 @@ borg_backups:
     timer_description: "Backup windows to server every 3 days at 21:00"
     oncalendar: "*-*-01/3 21:00:00"
     passphrase: "{{ borg_desktop_passphrase }}"
-    repo: "{{ borg_user }}@{{ server_local_ip }}:windows"
+    repo: "{{ borg_user }}@{{ hostvars.dresrv.ansible_host }}:windows"
     backup_name: "{{ ansible_hostname }}"
     pre_run: |
-      if ! ssh -q -o "BatchMode=yes" {{ borg_user }}@{{ server_local_ip }} exit &>/dev/null
+      if ! ssh -q -o "BatchMode=yes" {{ borg_user }}@{{ hostvars.dresrv.ansible_host }} exit &>/dev/null
       then
           echo "Cannot SSH into remote server"
           exit 1
