--- a/host_vars/dresrv/grafana.yml
+++ b/host_vars/dresrv/grafana.yml
@@ -2,8 +2,8 @@
 grafana_admin_pass: "{{ vault_grafana_admin_pass }}"
 grafana_admin_user: "{{ vault_grafana_admin_user }}"
 grafana_psql_pass: "{{ vault_grafana_psql_pass }}"
-grafana_domain: "www.{{ server_domain }}"
-grafana_url: "https://www.{{ server_domain }}/grafana/"
+grafana_domain: "www.{{ domain }}"
+grafana_url: "https://www.{{ domain }}/grafana/"
 grafana_instance: "localhost"
 grafana_address: "127.0.0.1"
 grafana_security:
@@ -13,7 +13,7 @@ grafana_smtp:
   host: "{{ smtp_host }}:{{ smtp_port }}"
   user: "{{ smtp_user }}"
   password: "{{ smtp_pass }}"
-  from_address: "grafana@{{ server_domain }}"
+  from_address: "grafana@{{ domain }}"
 grafana_database:
   type: postgres
   host: "localhost:{{ ports.postgres | default('5432') }}"
