Fixes and tweaks
* Bump cadvisor to 0.40.0
* Fix nginx certs
* Allow me to forward X
* Remove sanoid role from dresrv

--- a/host_vars/dresrv/sshd.yml
+++ b/host_vars/dresrv/sshd.yml
@@ -10,6 +10,7 @@ sshd_extra_config: |
   Match User {{ my_user }}
     StreamLocalBindUnlink yes
     AllowTcpForwarding yes
+    X11Forwarding yes
 
   # useradd -m -s /bin/false prom-tunnel
   Match User prom-tunnel
