--- a/playbooks/romsto.yml
+++ b/playbooks/romsto.yml
@@ -12,6 +12,25 @@
     - name: Gather facts
       setup:
       tags: ["always"]
+  post_tasks:
+    - block:
+        - name: Compress filebeat
+          archive:
+            path:
+              - "{{ filebeat_config_path }}"
+              - "{{ filebeat_home_path }}"
+              - "{{ sysv_path }}/rc.filebeat"
+            dest: /boot/filebeat.tar.gz
+
+        - name: Setup filebeat on boot
+          blockinfile:
+            path: /boot/config/go
+            marker: "# {mark} filebeat"
+            block: |
+              tar zxf /boot/filebeat.tar.gz -C /
+              install -o root -g root -dm755 {{ filebeat_log_path }}
+              {{ sysv_path }}/rc.filebeat start
+      tags: ["filebeat"]
   roles:
     # - role: node_exporter
     #   vars:
