--- a/host_vars/romsto/filebeat.yml
+++ b/host_vars/romsto/filebeat.yml
@@ -2,19 +2,13 @@
 
 filebeat_config:
   filebeat.inputs:
-    - type: syslog
-      format: rfc3164
-      protocol.udp:
-        host: "127.0.0.1:9000"
+    - type: docker
+      containers.ids: '*'
+      tags: ['docker']
 
     - type: log
-      paths:
-        - /var/log/syslog
-
-  filebeat.autodiscover:
-    providers:
-      - type: docker
-        hints.enabled: true
+      paths: ['/var/log/syslog']
+      tags: ['syslog']
 
   output.elasticsearch:
     hosts: "{{ vault_es_hosts }}"
