--- a/roles/systemd/defaults/main.yml
+++ b/roles/systemd/defaults/main.yml
@@ -1,65 +1,43 @@
 ---
 # Where to install scripts in {files,templates}/scripts
-systemd_script_install_path: /usr/local/bin/systemd/ansible
+systemd_script_install_path: /usr/local/bin/systemd
 
 # Where to install systemd units
 systemd_unit_install_path: /etc/systemd/system
-# systemd_unit_install_path: /usr/lib/systemd/system
-
-# Skip checking if any services are missing their associated executable
-# If this is true, all services will be installed,
-# even if they (probably) can't be run
-systemd_no_check_missing: false
-
-# Delete scripts in systemd_script_install_path that are no longer needed,
-# useful when one gets disabled for example
-systemd_delete_old_scripts: true
-
-systemd_scripts: []
 
 # List of service definitions, see commented out example below
 systemd_units: []
-#   - name: complete-example
-#     # If true, this unit will not be created, existing ones will be deleted
-#     disabled: false
-#     # If service section is missing it will create a simple service file as below
-# # [Unit]
-# # Description=complete-example
-# #
-# # [Service]
-# # ExecStart=/usr/local/bin/systemd/ansible/complete-example
-# #
-# # [Install]
-# # WantedBy=multi-user.target
-#     service:
-#       enabled: false
-#       started: false
-#       unit:
-#         description: Gitea backup # default <name>
-#         after: [ "nginx.service" ]
-#         requires: [ "nginx.service" ]
-#       service:
-#         type: simple # default oneshot
-#         user: nginx
-#         group: http
-#         remainafterexit: yes
-#         environment:
-#           - "TERM=xterm-256color"
-#           - "CONTAINER_ENGINE=docker"
-#         exec_start: [ "/bin/echo", "/bin/sleep" ]
-#       install:
-#         wantedby: graphical.target # default multi-user.target
-#     # No timer is created if this section is missing
-#     timer:
-#       enabled: false
-#       started: false
-#       unit:
-#         description: Timer description # default service description or <name>
-#       timer:
-#         persistent: false
-#         # One of the on* options is required
-#         oncalendar: "*-*-* 03:30:00"
-#         onbootsec: 30
-#         onunitactivesec: 10min
-#       install:
-#         wantedby: timers.target
+  # - name: example
+  #   service:
+  #     content: |
+  #       [Unit]
+  #       Description=Example unit
+
+  #       [Service]
+  #       Type=simple
+  #       ExecStart={{ systemd_script_install_path }}/example
+
+  #       [Install]
+  #       WantedBy=multi-user.target
+
+  #   # Daily at 03:00
+  #   timer:
+  #     enabled: true
+  #     state: started
+  #     content: |
+  #       [Unit]
+  #       Description=Scheduled example
+
+  #       [Timer]
+  #       Persistent=yes
+  #       OnCalendar=*-*-* 03:00:00
+
+  #       [Install]
+  #       WantedBy=timers.target
+
+  #   scripts:
+  #     - dest: "{{ systemd_script_install_path }}/example"
+  #       content: |
+  #         #!/bin/bash
+
+  #         echo "You can run stuff here"
