--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = git@github.com:cosandr/ansible-grafana.git
 [submodule "roles/nginx"]
 	path = roles/nginx
-	url = git@github.com:cosandr/ansible-role-nginx.git
+	url = https://github.com/geerlingguy/ansible-role-nginx.git
 [submodule "roles/unattended-upgrades"]
 	path = roles/unattended-upgrades
 	url = https://github.com/jnv/ansible-role-unattended-upgrades
